Minor style tweak: Fix overflow

--- a/css/bookmarks.css
+++ b/css/bookmarks.css
@@ -179,7 +179,6 @@ button span,
 .bookmarks {
 	display: flex;
 	flex-wrap: wrap;
-	overflow: hidden;
 	padding: 0 .6cm .6cm 0;
 }
 
